changes css, js

--- a/styles.css
+++ b/styles.css
@@ -1,4 +1,8 @@
 body {
-    background-image: url(‘https://unsplash.com/photos/a-black-and-white-photo-of-a-pattern-9C59SQb2ps0?utm_content=creditShareLink&utm_medium=referral&utm_source=unsplash’);
-    color: black;
-    }
+    margin: 0;
+    padding: 0;
+    height: 100vh;
+    background-size: cover;
+    background-position: center;
+    background-repeat: no-repeat;
+  }
